# libarandu

./: CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  arandu_rng.c  arandu_version.c
include/arandu/: arandu.h  common.h  rng.h
src/: CMakeLists.txt  arandu.c  rng.c
